8377665: JFR: Symbol table not setup for early class unloading